# plover-tinymod4

./: README.MD  plover_tinymod4_main.py  reinstall.sh  setup.cfg  setup.sh  start.sh
