[metadata]
name = plover-tinymod4
version = 1.0.1
description = TinyMod4 support for Plover
long_description = file: README.rst
author = Nathaniel Johns
author_email = blackbandit1258@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/stargazer1258/plover_tinymod4
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: Public Domain
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=34.4.0
	setuptools-scm
install_requires =
	plover>=4.0.0.dev0
	smbus
	RPi.GPIO
py_modules =
  plover_tinymod4_main

[options.entry_points]
plover.machine =
	TinyMod4 = plover_tinymod4_main:TinyMod4Machine
plover.extension =
	tinymod4_extension = plover_tinymod4_main:TinyMod4Extension

[bdist_wheel]
universal = 1

# vim: commentstring=#\ %s list
